@@ -11,6 +11,8 @@ release 0.14.2
 	  renamed file names instead of the original file names in the torrent.
 	* documentation fix of queing section
 	* fixed potential issue in udp_socket (affected udp tracker support)
+	* made name, comment and created by also be subject to utf-8 error
+	  correction (filenames already were)
 
 release 0.14.1
 
